# survivor-optimizer

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/data/: __init__.py  football_outsiders.py  loader.py  nflverse.py  pro_football_reference.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: __init__.py  win_probability.py
backend/app/optimizer/: __init__.py  monte_carlo.py
backend/scripts/: setup.py
data/: model_metrics.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Nav.tsx  PickCard.tsx  SurvivalCurve.tsx  TeamCalendar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Schedule.tsx  Simulation.tsx
