[project]
name = "survivor-optimizer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "aiohttp>=3.11.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "lxml>=5.3.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
