[project]
name = "survivor-optimizer"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "lxml>=4.9.0",
    "httpx>=0.25.0",
    "nfl_data_py>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
